src/test/ui/compare-method/region-extra.stderr
error[E0276]: impl has stricter requirements than trait
  --> $DIR/region-extra.rs:19:5
   |
LL |     fn foo();
   |     --------- definition of `foo` from trait
...
LL |     fn foo() where 'a: 'b { } //~ ERROR impl has stricter
   |     ^^^^^^^^^^^^^^^^^^^^^ impl has extra requirement `'a: 'b`

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0276"
